k8s/lgr-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lgr-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lgr-api
  template:
    metadata:
      labels:
        app: lgr-api
    spec:
      containers:
      - name: lgr-api
        image: rs401/letsgoripapi:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
          - containerPort: 80
