k8s/lgr-authapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lgr-authapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lgr-authapi
  template:
    metadata:
      labels:
        app: lgr-authapi
    spec:
      containers:
      - name: lgr-authapi
        image: rs401/letsgoripauthapi:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
          - containerPort: 9000
