k8s/lgr-forumsvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lgr-forumsvc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lgr-forumsvc
  template:
    metadata:
      labels:
        app: lgr-forumsvc
    spec:
      containers:
      - name: lgr-forumsvc
        image: rs401/letsgoripforumsvc:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
          - containerPort: 9001
