k8s/lgr-placesvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lgr-placesvc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lgr-placesvc
  template:
    metadata:
      labels:
        app: lgr-placesvc
    spec:
      containers:
      - name: lgr-placesvc
        image: rs401/letsgoripplacesvc:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
          - containerPort: 9003
