k8s/pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lgr-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lgr-postgres
  template:
    metadata:
      labels:
        app: lgr-postgres
    spec:
      containers:
      - name: lgr-postgres
        image: postgres:alpine
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
          - containerPort: 5432
