k8s/lgr-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lgr-api
spec:
  type: NodePort
  selector:
    app: lgr-api
  ports:
  # Apparently you can't use secrets with services...
    - port: 9000
      targetPort: 9000
