k8s/lgr-authsvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lgr-authsvc
spec:
  # type: NodePort
  selector:
    app: lgr-authsvc
  ports:
  # Apparently you can't use secrets with services...
    - port: 9001
      targetPort: 9001
