k8s/lgr-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lgr-ui
spec:
  # type: NodePort
  selector:
    app: lgr-ui
  ports:
    - port: 80
      targetPort: 80
