k8s/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lgr-postgres
spec:
  selector:
    app: lgr-postgres
  ports:
  - port: 5432
    targetPort: 5432
