k8s/lgr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lgr-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: lgrtest.com
      http:
        paths:
          - path: "/(.*)"
            pathType: Prefix
            backend:
              service:
                name: lgr-ui
                port:
                  number: 80
          - path: "/api/(api.*)"
            pathType: Prefix
            backend:
              service:
                name: lgr-api
                port:
                  number: 80
